--- a/visita.css
+++ b/visita.css
@@ -76,3 +76,31 @@ button:hover {
 .clean-btn:hover {
   background-color: #E2B6C5;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fff;
+  width: 300px;
+  padding: 20px;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.modal-btn {
+  padding: 10px 20px;
+  margin-top: 10px;
+  cursor: pointer;
+}
