--- a/servicos.css
+++ b/servicos.css
@@ -1,13 +1,23 @@
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .plan-chooser {
   background-color: rgba(255, 255, 255, 1);
   max-width: 430px;
   border-radius: 10px;
   padding: 20px;
   color: #000;
-  box-shadow: 0px 87px 78px -39px rgba(0,0,0,0.4);
-   display: flex;
+  box-shadow: 0px 87px 78px -39px rgba(0, 0, 0, 0.4);
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center; /* Centraliza verticalmente */
 }
 
 .header {
